--- a/demo/s.yaml
+++ b/demo/s.yaml
@@ -1,10 +1,10 @@
 edition: 1.0.0          #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp            #  项目名称
-access: aliyun-release  #  秘钥别名
+access: default  #  秘钥别名
 
 services:
   ros-test: #  服务名称
-    component:  ros
+    component:  devsapp/ros
     props:
       region: cn-hangzhou
       name: test
