--- a/publish.yaml
+++ b/publish.yaml
@@ -1,10 +1,11 @@
+Edition: 0.0.2
 Type: Component
 Name: ros
 Provider:
   - 阿里云
-Version: 0.0.3
+Version: 0.0.5
 Description: 通过阿里云 ROS 部署项目
-HomePage: https://www.aliyun.com
+HomePage: https://github.com/devsapp/ros
 Tags: ROS
 Category: 基础云服务
 Service:
@@ -15,53 +16,52 @@ Commands: # 指令，格式为指令：指令描述，例如：
   remove: 删除ROS
 Properties:
   region:
-    Description: 地域
-    Required: true
-    Type:
-      - Enum:
-          - cn-beijing
-          - cn-hangzhou
-          - cn-shanghai
-          - cn-qingdao
-          - cn-zhangjiakou
-          - cn-huhehaote
-          - cn-shenzhen
-          - cn-chengdu
-          - cn-hongkong
-          - ap-southeast-1
-          - ap-southeast-2
-          - ap-southeast-3
-          - ap-southeast-5
-          - ap-northeast-1
-          - eu-central-1
-          - eu-west-1
-          - us-west-1
-          - us-east-1
-          - ap-south-1
+    type: string
+    required: true
+    description: 地域
+    default: cn-hangzhou
+    allow: # The values that are allowed for this
+      - cn-beijing
+      - cn-hangzhou
+      - cn-shanghai
+      - cn-qingdao
+      - cn-zhangjiakou
+      - cn-huhehaote
+      - cn-shenzhen
+      - cn-chengdu
+      - cn-hongkong
+      - ap-southeast-1
+      - ap-southeast-2
+      - ap-southeast-3
+      - ap-southeast-5
+      - ap-northeast-1
+      - eu-central-1
+      - eu-west-1
+      - us-west-1
+      - us-east-1
+      - ap-south-1
   name:
-    Description: Stack 名字
-    Required: true
-    Type:
-      - String
+    type: string
+    required: true
+    description: Stack Name
   template:
-    Description: Template 本地路径
-    Required: true
-    Type:
-      - String
+    type: string
+    required: true
+    default: ./template.json
+    description: Stack Name
   policy:
-    Description: Policy 配置
-    Required: false
-    Type:
-      - Struct:
+    type: object
+    required: true
+    description: Policy 配置
+    items:
+      - type: object
+        keys:
           body:
-            Description: 包含资源栈策略主体的结构，长度为1~16,384个字节。
-            Required: false
-            Example: '{"Statement": [{"Action": "Update:*", "Resource": "*", "Effect": "Allow", "Principal": "*"}]}'
-            Type:
-              - String
+            type: string
+            required: true
+            example: '{"Statement": [{"Action": "Update:*", "Resource": "*", "Effect": "Allow", "Principal": "*"}]}'
+            description: 包含资源栈策略主体的结构，长度为1~16,384个字节。
           url:
-            Description: 包含资源栈策略的文件的位置。 URL必须指向位于Web服务器（HTTP或HTTPS）或阿里云OSS存储桶（例如：oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou）中的策略，策略文件最大长度为16,384个字节。 如未指定OSS地域，默认与接口参数RegionId相同。
-            Required: false
-            Example: oss://ros-stack-policy/demo
-            Type:
-              - String
+            type: string
+            example: oss://ros-stack-policy/demo
+            description: 包含资源栈策略的文件的位置。 URL必须指向位于Web服务器（HTTP或HTTPS）或阿里云OSS存储桶（例如：oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou）中的策略，策略文件最大长度为16,384个字节。 如未指定OSS地域，默认与接口参数RegionId相同。
