--- a/publish.yaml
+++ b/publish.yaml
@@ -3,7 +3,7 @@ Type: Component
 Name: ros
 Provider:
   - 阿里云
-Version: 0.0.6
+Version: 0.0.7
 Description: 通过阿里云 ROS 部署项目
 HomePage: https://github.com/devsapp/ros
 Tags: ROS
@@ -20,7 +20,7 @@ Properties:
     required: true
     description: 地域
     default: cn-hangzhou
-    allow: # The values that are allowed for this
+    enum:
       - cn-beijing
       - cn-hangzhou
       - cn-shanghai
@@ -53,13 +53,13 @@ Properties:
     type: object
     required: true
     description: Policy 配置
-    keys:
+    properties:
       body:
         type: string
         required: true
-        example: '{"Statement": [{"Action": "Update:*", "Resource": "*", "Effect": "Allow", "Principal": "*"}]}'
+        examples: ["{\"Statement\":[{\"Action\":\"Update:*\",\"Resource\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\"}]}"]
         description: 包含资源栈策略主体的结构，长度为1~16,384个字节。
       url:
         type: string
-        example: oss://ros-stack-policy/demo
+        examples: ["oss://ros-stack-policy/demo"]
         description: 包含资源栈策略的文件的位置。 URL必须指向位于Web服务器（HTTP或HTTPS）或阿里云OSS存储桶（例如：oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou）中的策略，策略文件最大长度为16,384个字节。 如未指定OSS地域，默认与接口参数RegionId相同。
