--- a/publish.yaml
+++ b/publish.yaml
@@ -3,7 +3,7 @@ Type: Component
 Name: ros
 Provider:
   - 阿里云
-Version: 0.0.7
+Version: 0.0.8
 Description: 通过阿里云 ROS 部署项目
 HomePage: https://github.com/devsapp/ros
 Tags: ROS
@@ -63,3 +63,7 @@ Properties:
         type: string
         examples: ["oss://ros-stack-policy/demo"]
         description: 包含资源栈策略的文件的位置。 URL必须指向位于Web服务器（HTTP或HTTPS）或阿里云OSS存储桶（例如：oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou）中的策略，策略文件最大长度为16,384个字节。 如未指定OSS地域，默认与接口参数RegionId相同。
+  parameters:
+    type: object
+    required: false
+    description: 模板中已定义的参数的名称和值
