--- a/publish.yaml
+++ b/publish.yaml
@@ -2,7 +2,7 @@ Type: Component
 Name: ros
 Provider:
   - 阿里云 # 取值内容参考：www.devsapp.cn/provider_list.html
-Version: dev
+Version: 0.0.16
 Description: 通过阿里云 ROS 部署阿里云资源
 HomePage: https://github.com/devsapp/ros
 Tags:
