--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,53 @@
-.DS_Store
-node_modules
-*.log
+### Node ###
+# Logs
+logs
+*.log*
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# dotenv environment variables file
+.env
+.env.test
+.env*.local
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Dependency directories
+bower_components
+node_modules/
+jspm_packages/
+
+# Output of 'npm pack'
+*.tgz
+
+### Code ###
+.vscode/*
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
 .idea
+out/
+
+
+### Custom ###
+.DS_Store
 .metadata
 jdt.ls-java-project
-lerna-debug.log
 .nyc_output
-coverage
 download
 *ui-spec.ts
 *slow-spec.ts
-dist
-lib
-.vscode
-.cache
-*/test
-*/src
-!fc/src
-!s-zip/src
-package-lock.json
+.husky
