--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "scripts": {
     "start": "npm run watch",
     "watch": "tsc -w",
-    "prebuild": "rimraf package-lock.json && rimraf dist && rimraf node_modules && npm i",
-    "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --external:@serverless-devs/core --outfile=dist/index.js"
+    "format": "prettier --write src/",
+    "prebuild": "rimraf dist && npm run format && npm i",
+    "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --external:@serverless-devs/core --outfile=dist/index.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@alicloud/openapi-client": "^0.4.6",
@@ -36,6 +38,8 @@
     "@types/node": "^14.0.23",
     "esbuild": "^0.13.8",
     "rimraf": "^3.0.2",
+    "prettier": "^2.8.4",
+    "husky": "^8.0.1",
     "ts-node": "^8.10.2",
     "typescript": "^4.4.2"
   }
