support can be call by s cli 3.0

--- a/examples/s.yaml
+++ b/examples/s.yaml
@@ -1,20 +1,25 @@
-edition: 1.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
+edition: 3.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
-vars:
-  stack-name: app-${env(DEV_ENV)}
+# vars:
+#   stack-name: app-v3-1
 
-services:
+resources:
   ros-test: #  服务名称
-    component: ${path(../)}
+    component: ${path("../")}
     props:
       region: cn-beijing
-      name: ${vars.stack-name}
+      #name: app-${vars.stack-name}
+      name: app-v3-1
       endpoint: ros.aliyuncs.com # 海外是 ros-intl.aliyuncs.com， 默认是国内
       template: ./ros_template.yaml
       parameters:
-        BucketName: bucket-${vars.stack-name}
-        InstanceName: inst-${vars.stack-name}
-        RoleName: role-${vars.stack-name}
-        PolicyName: policy-${vars.stack-name}
+        BucketName: bucket-app-v3-1
+        InstanceName: inst-app-v3-1
+        RoleName: role-app-v3-1
+        PolicyName: policy-app-v3-1
+        # BucketName: bucket-${vars.stack-name}
+        # InstanceName: inst-${vars.stack-name}
+        # RoleName: role-${vars.stack-name}
+        # PolicyName: policy-${vars.stack-name}
