--- a/examples/s2.yaml
+++ b/examples/s2.yaml
@@ -1,13 +1,13 @@
-edition: 1.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
+edition: 3.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
 vars:
-  stack-name: app-${env(DEV_ENV)}
+  stack-name: app-testv3-2
 
-services:
+resources:
   ros-test: #  服务名称
-    component: ${path(../)}
+    component: ${path("../")}
     props:
       region: cn-beijing
       name: ${vars.stack-name}
