--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ServerlessDevsComponent",
+  "name": "RosComponent",
   "version": "0.0.1",
-  "description": "This is a component demo for Serverless Devs Tool ",
+  "description": "This is ros component for Serverless Devs Tool ",
   "autoInstall": false,
   "homepage": "https://www.serverless-devs.com",
   "author": "Serverless-Devs",
   "contributors": [],
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "publishConfig": {
     "access": "public"
   },
@@ -22,24 +22,24 @@
     "start": "npm run watch",
     "watch": "tsc -w",
     "format": "prettier --write src/",
-    "prebuild": "rimraf dist && npm run format && npm i",
-    "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --external:@serverless-devs/core --outfile=dist/index.js",
+    "prebuild": "rimraf dist && npm run format &&  rimraf node_modules && npm i",
+    "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4  --outfile=dist/index.js",
     "prepare": "husky install"
   },
   "dependencies": {
     "@alicloud/openapi-client": "^0.4.6",
-    "@alicloud/pop-core": "^1.7.13",
     "@alicloud/ros20190910": "^3.2.26",
-    "@serverless-devs/core": "latest",
+    "@serverless-devs/component-interface": "^0.0.2",
+    "lodash": "^4.17.21",
     "string-random": "0.1.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
     "esbuild": "^0.13.8",
-    "rimraf": "^3.0.2",
-    "prettier": "^2.8.4",
     "husky": "^8.0.1",
+    "prettier": "^2.8.4",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^4.4.2"
   }
