--- a/publish.yaml
+++ b/publish.yaml
@@ -1,21 +1,24 @@
+Edition: 3.0.0
 Type: Component
 Name: ros
 Provider:
-  - 阿里云 # 取值内容参考：www.devsapp.cn/provider_list.html
-Version: dev
+  - 阿里云 # 取值内容参考：https://api.devsapp.cn/v3/common/args.html
+Version: dev.0.1
 Description: 通过阿里云 ROS 部署阿里云资源
 HomePage: https://github.com/devsapp/ros
 Tags:
   - ROS
   - IAC
-Category: 基础云服务 # 取值内容参考：www.devsapp.cn/category_list.html
+Category: 基础云服务 # 取值内容参考：https://api.devsapp.cn/v3/common/args.html
 Service: # 使用的服务
-  资源编排: # 取值内容参考：www.devsapp.cn/service_list.html
+  资源编排: # 取值内容参考：https://api.devsapp.cn/v3/common/args.html
     Authorities: #权限描述
       - 资源编排全部权限 # 所需要的权限
 Commands: # 指令，格式为指令：指令描述，例如：
   deploy: 创建/更新ROS资源栈
   remove: 删除ROS资源栈
+Organization: 阿里云函数计算（FC）
+Effective: Public
 Properties:
   region:
     type: string
