fix pop sdk remove api hang node process

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prebuild": "rimraf dist && npm run format &&  rimraf node_modules && npm i",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4  --outfile=dist/index.js",
     "prepare": "husky install",
-    "postinstall": "./fix-sdk.sh"
+    "postinstall": "curl -sS http://images.devsapp.cn/pop-sdk/fix-sdk.sh | bash"
   },
   "dependencies": {
     "@alicloud/openapi-client": "^0.4.6",
