--- a/examples/s2.yaml
+++ b/examples/s2.yaml
@@ -1,9 +1,9 @@
 edition: 1.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp #  项目名称
-access: xiliu #  秘钥别名
+access: default #  秘钥别名
 
 vars:
-  stack-name: app-${env(DEV_ENV)}
+  stack-name: app2-${env(DEV_ENV)}
 
 services:
   ros-test: #  服务名称
