feat: support infra is terraform file and add best practice

--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
     "format": "prettier --write src/",
     "prebuild": "rimraf dist && npm run format &&  rimraf node_modules && npm i",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4  --outfile=dist/index.js",
-    "prepare": "husky install",
     "postinstall": "curl -sS http://images.devsapp.cn/pop-sdk/fix-sdk.sh | bash"
   },
   "dependencies": {
     "@alicloud/openapi-client": "^0.4.6",
     "@alicloud/ros20190910": "^3.2.26",
     "@serverless-devs/component-interface": "^0.0.3-beta.1",
-    "@serverless-devs/utils": "^0.0.8-beta.6",
+    "@serverless-devs/utils": "^0.0.14",
+    "chalk": "^4.1.0",
     "inquirer": "^8.2.6",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "string-random": "0.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
     "esbuild": "^0.13.8",
-    "husky": "^8.0.1",
     "prettier": "^2.8.4",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
